--- a/css/styles.css
+++ b/css/styles.css
@@ -568,3 +568,12 @@ img {
   border-radius: 4px;
   color:  #ffffff;
 }
+
+.footer-subscribe-button{
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
