--- a/css/styles.css
+++ b/css/styles.css
@@ -576,5 +576,15 @@ img {
   justify-content: center;
   align-items: center;
   font-weight: 500;
+  font-family:"Roboto";
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4D5AE5;
+  border: none;
+  border-radius: 4px;
+
 
 }
