--- a/css/styles.css
+++ b/css/styles.css
@@ -617,3 +617,26 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+
+.modal-button-close{
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.modal-button-close:hover,
+.modal-button-close:focus{
+  background-color: #404bbf;
+  border: none; 
+}
