--- a/css/styles.css
+++ b/css/styles.css
@@ -622,6 +622,7 @@ img {
   position: absolute;
   top: 24px;
   right: 24px;
+  width: 24px;
   height: 24px;
   border-radius: 50%;
   display: flex;
