--- a/css/styles.css
+++ b/css/styles.css
@@ -639,5 +639,10 @@ img {
 .modal-button-close:hover,
 .modal-button-close:focus{
   background-color: #404bbf;
-  border: none; 
+  border: none;
+  fill: #ffffff; 
+}
+
+.modal-icon-close{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
