--- a/css/styles.css
+++ b/css/styles.css
@@ -689,3 +689,15 @@ img {
 .modal-input:focus{
   border-color: #4D5AE5;
 }
+
+.modal-icon{
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon:focus{
+  fill: #4D5AE5;
+}
