--- a/css/styles.css
+++ b/css/styles.css
@@ -698,6 +698,6 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-icon:focus{
+.modal-input:focus .modal-icon{
   fill: #4D5AE5;
 }
