--- a/css/styles.css
+++ b/css/styles.css
@@ -696,8 +696,9 @@ img {
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #4D5AE5;
 }
 
-.modal-input:focus  .modal-icon-wrapper .modal-icon {
-  fill: #ff0000;
+.modal-input:focus .modal-icon-wrapper .modal-icon {
+  fill: #4D5AE5;
 }
