--- a/css/styles.css
+++ b/css/styles.css
@@ -752,4 +752,6 @@ img {
 
 .modal-check-input:checked .modal-check-text .modal-check-box{
   background-color: #404bbf;
+  border: none;
+  fill: #F4F4FD;
 }
