--- a/css/styles.css
+++ b/css/styles.css
@@ -750,7 +750,7 @@ img {
   fill: transparent;
 }
 
-.modal-check-input:checked .modal-check-box {
+.modal-check-input:checked + .modal-check-text .modal-check-box {
   background-color:#404bbf;
   border: none;
   fill:#F4F4FD;
