--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #404bbf; 
+  color:black; 
   text-decoration: none;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -82,11 +82,17 @@ button {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.studio-link::after{
+.current{
+  color: #404bbf;
+  position: relative;
+}
+
+.current::after{
   content: '' ;
   position: absolute;
   left: 0;
   bottom: -1px;
+  width: 100%;
   height: 4px; 
   background-color: #404bbf;
   border-radius: 2px;
@@ -339,14 +345,13 @@ button {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
-  text-align: center;
+  
 }
 
 .portfolio-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  text-align: center;
 }
 
 .company-list {
@@ -371,6 +376,7 @@ button {
   justify-content: center;
   gap: 24px;
   align-items: center;
+  margin-top: 8px;
 }
 
 .team-link-icon {
@@ -382,7 +388,7 @@ button {
   background-color: var(--social-icon-color, #4d5ae5);
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
-  margin-top: 6px;
+  
 }
 
 .team-item-icon{
@@ -448,6 +454,7 @@ img {
 .work-item{
   width: calc((100% - 48px) / 3); 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 
 .work-container{
@@ -486,12 +493,8 @@ img {
 .footer-container{
   display: flex;
   align-items: baseline;
-  margin-left: 156px;
 }
 
-.footer-wrapper{
-  margin-right: 120px;
-}
 
 .footer-icon-text{
   font-weight: 500;
@@ -548,12 +551,14 @@ img {
  line-height: 1.5;
  letter-spacing:  0.02em;
  color: #ffffff;
- margin-left: 80px;
 }
 
 .footer-form{
   display: flex;
   gap: 24px;
+}
+.form-container{
+  margin-left: 80px;
   padding-left: 80px;
 }
 
@@ -698,6 +703,9 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #4D5AE5;
 }
+.active{
+  fill: black;
+}
 
 .modal-input:focus .modal-icon-wrapper .modal-icon {
   fill: #4D5AE5;
@@ -761,6 +769,7 @@ img {
 }
 
 .modal-button-submit{
+  margin-left: 100px;
   display: block;
   min-width: 169px;
   height: 56px;
